# vlm_obj_det

./: .gitignore  README.dataset.txt  README.roboflow.txt  ground_truth.ipynb  mAP.ipynb  mAP.py  pyproject.toml  train.py
.ipynb_checkpoints/: ground_truth-checkpoint.ipynb
